# text-rendering-engine

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-release.yml
assets/: style.json
